mejoras generales de la plataforma